@@ -4,6 +4,9 @@ Change history
 Release Candidate 3
 ===================
 
+- FormHelper.Select() - applied patch from James Sapara allowing firstoptionvalue to be set to 
+  something other than null. 
+
 - Restored property IsPostback checking (For use with WebFormViewEngine).
 
 - Restored support for passing additional arguments to a controller
